# KTX-Compressor

./: .gitignore  README.md  vcpkg.json
docs/Writerside/: k.tree
docs/Writerside/topics/: HelpfulLinks.md  ktx-compressor.md
src/KTXCompressor/: CMakeLists.txt  CMakePresets.json  shader_compiler.bat
src/KTXCompressor.AngularApp/: README.md  angular.json  package-lock.json  package.json  server.ts
src/KTXCompressor.AngularApp/src/: index.html
src/KTXCompressor.AngularApp/src/app/: app.component.html  app.component.spec.ts  app.component.ts
src/KTXCompressor.AngularApp/src/app/visualiser/: visualiser-camera.ts  visualiser.component.css  visualiser.component.spec.ts  visualiser.component.ts  visualiser.ts
src/KTXCompressor.AngularApp/src/app/visualiser/utils/: sizes.ts  time.ts
src/KTXCompressor/KTXCompressor/: CMakeLists.txt  Common.h  KTXCompressor.cpp  KTXCompressor.h  Texture.cpp  Texture.h  TextureOld.cpp  TextureOld.h
src/KTXCompressor/KTXCompressor/Renderer/: Instance.cpp  Instance.h  RendererApp.cpp  RendererApp.h  RendererConstants.cpp  RendererConstants.h  Window.cpp  Window.h
src/KTXCompressor/KTXCompressor/Renderer/Commands/: Command.cpp  Command.h  CopyBufferCommand.cpp  CopyBufferCommand.h  DrawCommand.cpp  DrawCommand.h  SingleTimeCommand.cpp  SingleTimeCommand.h
src/KTXCompressor/KTXCompressor/Renderer/Graphics/: GraphicsPipeline.cpp  GraphicsPipeline.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h
src/KTXCompressor/KTXCompressor/Renderer/Graphics/DescriptorSets/: CombinedImageSamplerDescriptorSet.cpp  CombinedImageSamplerDescriptorSet.h  DescriptorSet.cpp  DescriptorSet.h  ModelViewProjectionDescriptorSet.cpp  ModelViewProjectionDescriptorSet.h
src/KTXCompressor/KTXCompressor/Renderer/Graphics/DescriptorSets/DescriptorPools/: DescriptorPool.cpp  DescriptorPool.h
src/KTXCompressor/KTXCompressor/Renderer/Graphics/ImGui/: ImGuiGraphicsPipeline.cpp  ImGuiGraphicsPipeline.h  ImGuiRenderPass.cpp  ImGuiRenderPass.h
src/KTXCompressor/KTXCompressor/Renderer/Graphics/ImGui/Menu/: ImGuiMainMenu.cpp  ImGuiMainMenu.h
src/KTXCompressor/KTXCompressor/Renderer/Graphics/ImGui/Menu/PopUps/: ImGuiFileSelectorPopUp.cpp  ImGuiFileSelectorPopUp.h
src/KTXCompressor/KTXCompressor/Renderer/Graphics/ImGui/PopUps/: ImGuiFileSelectorPopUp.cpp  ImGuiFileSelectorPopUp.h
src/KTXCompressor/KTXCompressor/Renderer/Graphics/RenderPasses/: ColourAndDepthRenderPass.cpp  ColourAndDepthRenderPass.h  RenderPass.cpp  RenderPass.h
src/KTXCompressor/KTXCompressor/Renderer/Graphics/Shaders/SimpleTriangle/: SimpleTriangleGraphicsPipeline.cpp  SimpleTriangleGraphicsPipeline.h  SimpleTriangleShader.cpp  SimpleTriangleShader.h
src/KTXCompressor/KTXCompressor/Renderer/Graphics/Shaders/SimpleTriangle/shaders/: simple_triangle.frag  simple_triangle.frag.spv
src/KTXCompressor/KTXCompressor/Renderer/Graphics/SimpleTriangle/: SimpleTriangleGraphicsPipeline.cpp  SimpleTriangleGraphicsPipeline.h  SimpleTriangleShader.cpp  SimpleTriangleShader.h
src/KTXCompressor/KTXCompressor/Renderer/Graphics/SimpleTriangle/shaders/: simple_triangle.frag  simple_triangle.frag.spv  simple_triangle.vert  simple_triangle.vert.spv
src/KTXCompressor/KTXCompressor/Renderer/Graphics/Textures/: DepthTexture.cpp  DepthTexture.h  ImageTexture.cpp  Texture.cpp  Texture.h
src/KTXCompressor/KTXCompressor/Renderer/Instance/: Debugger.cpp  Debugger.h  Instance.cpp  Instance.h
src/KTXCompressor/KTXCompressor/Renderer/Instance/Debug/: Debugger.cpp  Debugger.h
src/KTXCompressor/KTXCompressor/Renderer/Instance/Devices/: LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h
src/KTXCompressor/KTXCompressor/Renderer/Instance/Devices/Queues/: GraphicsQueue.cpp  GraphicsQueue.h  PresentQueue.cpp  PresentQueue.h  Queue.cpp  Queue.h  QueueFamily.cpp  QueueFamily.h
src/KTXCompressor/KTXCompressor/Renderer/Instance/PhysicalDevice/: PhysicalDevice.cpp  PhysicalDevice.h
src/KTXCompressor/KTXCompressor/Renderer/Presentation/: FrameBuffer.cpp  FrameBuffer.h  ImageView.cpp  ImageView.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h
src/KTXCompressor/KTXCompressor/Renderer/Synchronization/: Synchronization.cpp  Synchronization.h
src/KTXCompressor/KTXCompressor/Renderer/Textures/: DepthTexture.cpp  DepthTexture.h  ImageTexture.cpp  ImageTexture.h  KTXTexture.cpp  KTXTexture.h  Texture.cpp  Texture.h
src/KTXCompressor/KTXCompressor/Renderer/Utils/: BufferUtil.cpp  BufferUtil.h
src/KTXCompressor/KTXCompressor/Utils/ObserverPattern/: Observable.h  Subscription.h
